[PAGOPA-2696] fix: resolving bug on repository creation